--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-<title>WEBCODE</title>
-<link rel=”stylesheet” href=”style.css”>
+<title>AshV</title>
+<link rel="stylesheet" href="style.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-B2GTPZ0N40"></script>
 <script>
@@ -19,11 +19,11 @@
   Header
 </header>
 <main>
-<section id=”hero”>
+<section id="hero">
 </section>
-<section id=”about”>
+<section id="about">
 </section>
-<section id=”contact”>
+<section id="contact">
 </section>
 </main>
 <footer>
